...
        return imageView
    }
    
    private func getLogoutButton() -> UIView {
        let logoutButton = UIButton(type: .custom)
        logoutButton.translatesAutoresizingMaskIntoConstraints = false
        logoutButton.setImage(UIImage(named: "Logout") ?? UIImage(), for: .normal)
        logoutButton.addTarget(self, action: #selector(didTapLogoutButton), for: .touchUpInside)
        logoutButton.tintColor = .ypRed
        logoutButton.accessibilityIdentifier = "Logout"
        return logoutButton
    }
    
...
